--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             <div class="col header-section">
                 <video wdith="324" height="448" controls>
-                            <source src="images/DDS.mp4" type="video/mp4">
+                            <source src="https://youtube.com/shorts/ETqTl5PhBos?feature=share" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
             </div>
