--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             <div class="col header-section">
                 <video wdith="324" height="448" controls>
-                            <source src="https://youtube.com/shorts/ETqTl5PhBos?feature=share" type="video/mp4">
+                            <source src="images/DDS.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
             </div>
@@ -62,8 +62,8 @@
                 </div>
                 <div class="carousel-item">
                     <div class="header-section">
-                        <video wdith="324" height="448" controls>
-                            <source src="images/DDS.mp4" type="video/mp4">
+                        <video width="324" height="448" controls>
+                            <source src="https://youtube.com/shorts/ETqTl5PhBos?feature=share" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                     </div>
@@ -81,7 +81,7 @@
     </header>
 
     <section id="logos" class="container my-5 text-center">
-        <h2 class="py-2">Skill Set</h2>
+        <h2 class="py-2">Strong Knowledge</h2>
         <div class="row">
             <div class="col">
                 <img src="images/php.png" alt="PHP Logo" class="img-fluid skill-logo" />
@@ -104,6 +104,22 @@
             <div class="col">
                 <img src="images/figma.png" alt="Figma Logo" class="img-fluid skill-logo" />
             </div>
+        </div>
+    </section>
+
+    <section id="logos" class="container my-5 text-center">
+        <h2 class="py-2">Some Experience With</h2>
+        <div class="row">
+            <div class="col">
+                <img src="images/react.png" alt="PHP Logo" class="img-fluid skill-logo" />
+            </div>
+            <div class="col">
+                <img src="images/CMS.png" alt="MySQL Logo" class="img-fluid skill-logo" />
+            </div>
+            <div class="col">
+                <img src="images/photoshop.png" alt="HTML Logo" class="img-fluid skill-logo" />
+            </div>
+           
         </div>
     </section>
 
