--- a/index.html
+++ b/index.html
@@ -41,10 +41,7 @@
                 <h2>Scratcher Game</h2>
             </div>
             <div class="col header-section">
-                <video wdith="324" height="448" controls>
-                            <source src="images/DDS.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
+                <iframe width="324" height="448" src="https://youtube.com/shorts/ETqTl5PhBos" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </div>
         <!-- Mobile: show carousel -->
@@ -62,10 +59,7 @@
                 </div>
                 <div class="carousel-item">
                     <div class="header-section">
-                        <video width="324" height="448" controls>
-                            <source src="https://youtube.com/shorts/ETqTl5PhBos?feature=share" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
+                        <iframe width="324" height="448" src="https://youtube.com/shorts/ETqTl5PhBos" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
