Replace YouTube shorts iframe with embed version
Because apparently you can't embed a YouTube short.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,15 @@
                 <h2>Scratcher Game</h2>
             </div>
             <div class="col header-section">
-                <iframe width="324" height="448" src="https://youtube.com/shorts/ETqTl5PhBos" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe
+                  width="324"
+                  height="448"
+                  src="https://www.youtube.com/embed/ETqTl5PhBos"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen
+                ></iframe>
             </div>
         </div>
         <!-- Mobile: show carousel -->
@@ -59,7 +67,15 @@
                 </div>
                 <div class="carousel-item">
                     <div class="header-section">
-                        <iframe width="324" height="448" src="https://youtube.com/shorts/ETqTl5PhBos" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <iframe
+                          width="324"
+                          height="448"
+                          src="https://www.youtube.com/embed/ETqTl5PhBos"
+                          title="YouTube video player"
+                          frameborder="0"
+                          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                          allowfullscreen
+                        ></iframe>
                     </div>
                 </div>
             </div>
