Correct image filename for CMS logo

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <img src="images/react.png" alt="PHP Logo" class="img-fluid skill-logo" />
             </div>
             <div class="col">
-                <img src="images/CMS.png" alt="MySQL Logo" class="img-fluid skill-logo" />
+                <img src="images/cms.png" alt="MySQL Logo" class="img-fluid skill-logo" />
             </div>
             <div class="col">
                 <img src="images/photoshop.png" alt="HTML Logo" class="img-fluid skill-logo" />
