Update alt text for skill logos in index.html

--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
         <h2 class="py-2">Some Experience With</h2>
         <div class="row">
             <div class="col">
-                <img src="images/react.png" alt="PHP Logo" class="img-fluid skill-logo" />
+                <img src="images/react.png" alt="React Logo" class="img-fluid skill-logo" />
             </div>
             <div class="col">
-                <img src="images/cms.png" alt="MySQL Logo" class="img-fluid skill-logo" />
+                <img src="images/cms.png" alt="Content Management Logo" class="img-fluid skill-logo" />
             </div>
             <div class="col">
-                <img src="images/photoshop.png" alt="HTML Logo" class="img-fluid skill-logo" />
+                <img src="images/photoshop.png" alt="Photoshop Logo" class="img-fluid skill-logo" />
             </div>
            
         </div>
