--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
                     <a class="nav-link" href="#logos">Skill Set</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#php">PHP/MySQL</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#react">React</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Rails</a>
+                </li>
+                 <li class="nav-item">
                     <a class="nav-link" href="#about">About Me</a>
                 </li>
                 <li class="nav-item">
@@ -32,69 +41,24 @@
     </nav>
 
     <header class="container text-center my-5">
-        <!-- Desktop: show row -->
-        <div class="row d-none d-md-flex">
-            <div class="col header-section">
-                <h1>Spin-to-win Game</h1>
+        <div class="row">
+            <div class="col-12 col-md-4 mb-3 mb-md-0">
+                <img src="images/dev-meme-1.png" alt="Developer Meme 1" class="img-fluid" />
             </div>
-            <div class="col header-section">
-                <h2>Scratcher Game</h2>
+            <div class="col-12 col-md-4 mb-3 mb-md-0">
+                <img src="images/dev-meme-2.png" alt="Developer Meme 2" class="img-fluid" />
             </div>
-            <div class="col header-section">
-                <iframe
-                  width="324"
-                  height="448"
-                  src="https://www.youtube.com/embed/ETqTl5PhBos"
-                  title="YouTube video player"
-                  frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  allowfullscreen
-                ></iframe>
+            <div class="col-12 col-md-4 mb-3 mb-md-0">
+                <img src="images/dev-meme-3.png" alt="Developer Meme 3" class="img-fluid" />
             </div>
-        </div>
-        <!-- Mobile: show carousel -->
-        <div id="headerCarousel" class="carousel slide d-md-none" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <div class="header-section">
-                        <h1>Spin-to-win Game</h1>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="header-section">
-                        <h2>Scratcher Game</h2>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="header-section">
-                        <iframe
-                          width="324"
-                          height="448"
-                          src="https://www.youtube.com/embed/ETqTl5PhBos"
-                          title="YouTube video player"
-                          frameborder="0"
-                          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                          allowfullscreen
-                        ></iframe>
-                    </div>
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#headerCarousel" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#headerCarousel" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
         </div>
     </header>
 
     <section id="logos" class="container my-5 text-center">
-        <h2 class="py-2">Strong Knowledge</h2>
+        <h2 class="py-2">Core Toolbox:</h2>
         <div class="row">
             <div class="col">
-                <img src="images/php.png" alt="PHP Logo" class="img-fluid skill-logo" />
+                <img src="images/php.png" alt="PHP Logo" class="img-fluid skill-logo" title="PHP" />
             </div>
             <div class="col">
                 <img src="images/mysql.png" alt="MySQL Logo" class="img-fluid skill-logo" />
@@ -118,18 +82,20 @@
     </section>
 
     <section id="logos" class="container my-5 text-center">
-        <h2 class="py-2">Some Experience With</h2>
+        <h2 class="py-2">Some Experience With:</h2>
         <div class="row">
             <div class="col">
                 <img src="images/react.png" alt="React Logo" class="img-fluid skill-logo" />
             </div>
             <div class="col">
-                <img src="images/cms.png" alt="Content Management Logo" class="img-fluid skill-logo" />
+                <img src="images/cms.png" alt="Contact management logo" class="img-fluid skill-logo" />
             </div>
             <div class="col">
                 <img src="images/photoshop.png" alt="Photoshop Logo" class="img-fluid skill-logo" />
             </div>
-           
+           <div class="col">
+                <img src="images/ruby.png" alt="Ruby Logo" class="img-fluid skill-logo" />
+            </div>
         </div>
     </section>
 
@@ -147,25 +113,26 @@
             </p>
             <h5>Core Competencies</h5>
             <ul class="list-unstyled">
-                <li><strong>Frontend:</strong> HTML5, CSS3, JavaScript, jQuery, SASS, Responsive Design</li>
+                <li><strong>Frontend:</strong> HTML5, CSS, JavaScript, jQuery, SASS, Responsive Design</li>
                 <li><strong>Backend:</strong> PHP (Procedural), Custom CMS Work</li>
                 <li><strong>Tools &amp; Platforms:</strong> VSCode, Photoshop, Figma</li>
-                <li><strong>AI Tools:</strong> ChatGPT, Openart.ai – leveraging for code, copywriting &amp; ideation</li>
+                <li><strong>AI Tools:</strong> ChatGPT, Openart.ai and CoPilot - leveraging for code, copywriting &amp; ideation</li>
                 <li><strong>Soft Skills:</strong> Cross-team collaboration, creative problem-solving, adaptive learner</li>
             </ul>
             <h5>Professional Experience</h5>
             <p><strong>Sr. Web Developer</strong><br>
-            Discount Dance LLC – Remote/Hemet, CA<br>
-            2008 – 2025</p>
+            Discount Dance LLC - Remote/Hemet, CA<br>
+            2008 - 2025</p>
             <ul>
                 <li>Led mobile-first redesign of company ecommerce platform</li>
                 <li>Developed engaging gamification features (e.g., online scratchers, spin-the-wheel)</li>
-                <li>Supported cross-department needs, including marketing, design, and IT</li>
+                <li>Supported cross-department needs, including marketing, customer service, design, and IT</li>
                 <li>Handled both frontend and backend tasks with minimal supervision</li>
+                <li>Worked with third-parties such as Attentive, Optiversal, and Cordial</li>
             </ul>
             <p><strong>IT Support / IT Manager</strong><br>
-            RE/MAX All Cities Realty – Torrance, CA<br>
-            2001 – 2008</p>
+            RE/MAX All Cities Realty - Torrance, CA<br>
+            2001 - 2008</p>
             <ul>
                 <li>Wrote and maintained weekly instructional blogs for real estate agents</li>
                 <li>Developed timecard automation software to replace manual systems</li>
@@ -173,7 +140,7 @@
             </ul>
             <h5>Education</h5>
             <p>
-                Bachelor’s Degree – IT &amp; Web Development<br>
+                Bachelor's Degree - IT &amp; Web Development<br>
                 Kaplan University, graduated 2012.
             </p>
             <h5>Hobbies &amp; Personal Interests</h5>
@@ -192,10 +159,10 @@
                 </div>
                 <div class="col-md-9">
                     <p>
-                        I’m Stewart Hoffman, a web developer and IT professional with over 20 years of experience in e-commerce, front-end development, and IT management.
+                        I'm Stewart Hoffman, a web developer and IT professional with over 20 years of experience in e-commerce, front-end development, and IT management.
                     </p>
                     <p>
-                        For the past 17+ years, I’ve served as a Web Developer at Discount Dance LLC, where I’ve specialized in building and optimizing e-commerce solutions, designing responsive mobile experiences, and maintaining high-performing websites that serve a large and diverse customer base. My work blends technical expertise with a strong focus on user experience, ensuring smooth navigation and effective online sales performance.
+                        For the past 17+ years, I've served as a Web Developer at Discount Dance LLC, where I've specialized in building and optimizing e-commerce solutions, designing responsive mobile experiences, and maintaining high-performing websites that serve a large and diverse customer base. My work blends technical expertise with a strong focus on user experience, ensuring smooth navigation and effective online sales performance.
                     </p>
                     <p>
                         Before that, I spent 6+ years as an IT Manager with RE/MAX Marquee Partners (formerly RE/MAX Beach Cities Realty), overseeing network infrastructure, troubleshooting complex systems, and providing web development support. This role strengthened my problem-solving skills, adaptability, and ability to manage both technical systems and cross-team needs.
@@ -204,7 +171,7 @@
                         I bring a versatile skill set that includes PHP, HTML, CSS, JavaScript, jQuery, MySQL, Photoshop, and Figma, with a focus on clean, efficient, and scalable solutions. I enjoy bridging design and functionality, turning concepts into responsive, user-friendly applications.
                     </p>
                     <p>
-                        At 53, I’m excited about leveraging my deep technical background and creative problem-solving abilities to continue delivering impactful digital solutions and supporting organizations in achieving their online goals.
+                        At 53, I'm excited about leveraging my deep technical background and creative problem-solving abilities to continue delivering impactful digital solutions and supporting organizations in achieving their online goals.
                     </p>
                 </div>
             </div>
@@ -212,31 +179,11 @@
     </section>
 
     <section id="contact" class="container my-5">
-        <h2 class="text-center py-4">Contact Me</h2>
+        <h2 class="text-center py-4">Contact Me (Powered by Ruby on Rails!)</h2>
         <div class="contact-content mx-auto">
-            <form>
-                <div class="form-row">
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="contactName">Name</label>
-                            <input type="text" class="form-control" id="contactName" placeholder="Your Name" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="contactEmail">Email</label>
-                            <input type="email" class="form-control" id="contactEmail" placeholder="Your Email" required>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group h-100 d-flex flex-column">
-                            <label for="contactMessage">Message</label>
-                            <textarea class="form-control flex-grow-1" id="contactMessage" rows="5" placeholder="Your Message" required></textarea>
-                        </div>
-                    </div>
-                </div>
-                <div class="text-center mt-3">
-                    <button type="submit" class="btn btn-primary">Send</button>
-                </div>
-            </form>
+            <iframe src="contact-form.html" width="100%" height="500" frameborder="0" title="Contact Form">
+                <p>Your browser does not support iframes. Please visit our <a href="contact-form.html">contact page</a> directly.</p>
+            </iframe>
         </div>
     </section>
 
