Change iframe to external contact form URL
Updated iframe source to use external contact form hosted by Render.

--- a/index.html
+++ b/index.html
@@ -181,8 +181,13 @@
     <section id="contact" class="container my-5">
         <h2 class="text-center py-4">Contact Me (Powered by Ruby on Rails!)</h2>
         <div class="contact-content mx-auto">
-            <iframe src="contact-form.html" width="100%" height="500" frameborder="0" title="Contact Form">
-                <p>Your browser does not support iframes. Please visit our <a href="contact-form.html">contact page</a> directly.</p>
+            <iframe
+              src="https://rails-contact-form.onrender.com"
+              width="100%"
+              height="650"
+              style="border:0"
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade">
             </iframe>
         </div>
     </section>
