--- a/index.html
+++ b/index.html
@@ -180,15 +180,15 @@
 
     <section id="contact" class="container my-5">
         <h2 class="text-center py-4">Contact Me (Powered by Ruby on Rails!)</h2>
-        <div class="contact-content mx-auto">
-            <iframe
-              src="https://rails-contact-form.onrender.com"
-              width="100%"
-              height="650"
-              style="border:0"
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
+        <div style="position:relative;padding-top:56.25%;height:0;overflow:hidden;">
+          <iframe
+            src="https://rails-contact-form.onrender.com"
+            title="Contact Form"
+            style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;"
+            referrerpolicy="no-referrer-when-downgrade"
+            loading="lazy"
+            allow="clipboard-write; encrypted-media"
+          ></iframe>
         </div>
     </section>
 
