--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     </section>
 
     <section id="contact" class="container my-5">
-        <h2 class="text-center py-4">Contact Me (Powered by Ruby on Rails!)</h2>
+        <h2 class="text-center py-4">Contact Me Form (Powered by Ruby on Rails, GitHub, and Render)</h2>
         <div style="position:relative;padding-top:56.25%;height:0;overflow:hidden;">
           <iframe
             src="https://rails-contact-form.onrender.com"
