Remove duplicate section id 'logos' from index.html
Removed duplicate section id 'logos' from the HTML.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
     </header>
 
-    <section id="logos" class="container my-5 text-center">
+    <section class="container my-5 text-center">
         <h2 class="py-2">Core Toolbox:</h2>
         <div class="row">
             <div class="col">
@@ -81,7 +81,7 @@
         </div>
     </section>
 
-    <section id="logos" class="container my-5 text-center">
+    <section class="container my-5 text-center">
         <h2 class="py-2">Some Experience With:</h2>
         <div class="row">
             <div class="col">
