--- a/index.html
+++ b/index.html
@@ -183,72 +183,22 @@
 
   <div class="row justify-content-center">
     <div class="col-12 col-lg-8">
-      <form id="contactForm" novalidate>
-        <!-- Basic "human" spam trap (bots love filling hidden fields) -->
-        <div class="d-none">
-          <label for="company">Company</label>
-          <input type="text" id="company" name="company" autocomplete="off" tabindex="-1">
-        </div>
+      <form
+  action="https://formspree.io/f/mojqygzg"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+</form>
 
-        <div class="form-group">
-          <label for="name">Name <span aria-hidden="true">*</span></label>
-          <input
-            type="text"
-            class="form-control"
-            id="name"
-            name="name"
-            required
-            minlength="2"
-            maxlength="80"
-            autocomplete="name"
-          />
-          <div class="invalid-feedback">Please enter your name (2–80 characters).</div>
-        </div>
-
-        <div class="form-group">
-          <label for="email">Email <span aria-hidden="true">*</span></label>
-          <input
-            type="email"
-            class="form-control"
-            id="email"
-            name="email"
-            required
-            maxlength="254"
-            autocomplete="email"
-          />
-          <div class="invalid-feedback">Please enter a valid email address.</div>
-        </div>
-
-        <div class="form-group">
-          <label for="message">Message <span aria-hidden="true">*</span></label>
-          <textarea
-            class="form-control"
-            id="message"
-            name="message"
-            rows="6"
-            required
-            minlength="10"
-            maxlength="2000"
-            placeholder="What can I help you with?"
-          ></textarea>
-          <div class="invalid-feedback">Please enter a message (10–2000 characters).</div>
-        </div>
-
-        <button type="submit" class="btn btn-primary btn-block" id="contactSubmitBtn">
-          Send Message
-        </button>
-
-        <div class="mt-3" aria-live="polite">
-          <div id="contactSuccess" class="alert alert-success d-none" role="alert">
-            Message sent! I’ll get back to you soon.
-          </div>
-          <div id="contactError" class="alert alert-danger d-none" role="alert"></div>
-        </div>
-      </form>
-
-      <small class="text-muted d-block mt-2">
-        (No carrier pigeons were harmed in the sending of this message.)
-      </small>
     </div>
   </div>
 </section>
