--- a/index.html
+++ b/index.html
@@ -188,6 +188,10 @@
   method="POST"
 >
   <label>
+      Your name:
+      <input type="text" name="name">
+  </label>
+  <label>
     Your email:
     <input type="email" name="email">
   </label>
