Revamp contact form with Bootstrap styling

--- a/index.html
+++ b/index.html
@@ -184,24 +184,49 @@
   <div class="row justify-content-center">
     <div class="col-12 col-lg-8">
       <form
+  id="contactForm"
   action="https://formspree.io/f/mojqygzg"
   method="POST"
+  novalidate
 >
-  <label>
-      Your name:
-      <input type="text" name="name">
-  </label>
-  <label>
-    Your email:
-    <input type="email" name="email">
-  </label>
-  <label>
-    Your message:
-    <textarea name="message"></textarea>
-  </label>
-  <!-- your other form fields go here -->
-  <button type="submit">Send</button>
+  <div class="form-group mb-3">
+    <label for="name" class="form-label">Name</label>
+    <input
+      type="text"
+      class="form-control"
+      id="name"
+      name="name"
+      required
+    />
+  </div>
+
+  <div class="form-group mb-3">
+    <label for="email" class="form-label">Email</label>
+    <input
+      type="email"
+      class="form-control"
+      id="email"
+      name="email"
+      required
+    />
+  </div>
+
+  <div class="form-group mb-4">
+    <label for="message" class="form-label">Message</label>
+    <textarea
+      class="form-control"
+      id="message"
+      name="message"
+      rows="6"
+      required
+    ></textarea>
+  </div>
+
+  <button type="submit" class="btn btn-primary w-100">
+    Send Message
+  </button>
 </form>
+
 
     </div>
   </div>
